--- a/.github/workflows/deploy-npm.yml
+++ b/.github/workflows/deploy-npm.yml
@@ -29,6 +29,10 @@ on:
         required: false
         type: string        
         default: "true"
+      CI: 
+        required: false
+        type: string        
+        default: "true"        
     secrets:
       DOCKER_PASSWORD:
         required: true
@@ -60,6 +64,7 @@ jobs:
           QEMU_SETUP: "${{ inputs.QEMU_SETUP }}"
           DOCKER_USER: "${{ inputs.DOCKER_USER }}"
           DOCKER_PASSWORD: "${{ secrets.DOCKER_PASSWORD }}"
+          CI: "${{ inputs.CI }}"
 
       - uses: athenarc/actions-docker-compose-deploy@master
         id: docker_deploy
