--- a/.github/workflows/deploy-npm.yml
+++ b/.github/workflows/deploy-npm.yml
@@ -33,11 +33,12 @@ on:
         required: false
         type: string        
         default: "true"        
-    secrets:
       DOCKER_PASSWORD:
         required: true
+        type: string
       AUTH_TOKEN:
         required: false
+        type: string
 
 jobs:
   docker_build:
@@ -64,13 +65,13 @@ jobs:
           DOCKER_REPO: "${{ inputs.DOCKER_REPO }}"
           QEMU_SETUP: "${{ inputs.QEMU_SETUP }}"
           DOCKER_USER: "${{ inputs.DOCKER_USER }}"
-          DOCKER_PASSWORD: "${{ secrets.DOCKER_PASSWORD }}"
+          DOCKER_PASSWORD: "${{ env.DOCKER_PASSWORD }}"
           CI: "${{ inputs.CI }}"
 
       - uses: athenarc/actions-docker-compose-deploy@master
         id: docker_deploy
         with:
-          AUTH_TOKEN: "${{ secrets.AUTH_TOKEN }}"
+          AUTH_TOKEN: "${{ env.AUTH_TOKEN }}"
           USE_PULL_REPO: "${{ inputs.USE_PULL_REPO }}"
           DEPLOY_URL: "${{ inputs.DEPLOY_URL }}"
           IMAGES: "${{ steps.docker_build.outputs.images }}"
